Fixing title view on mobile of WhoWe Are

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -720,7 +720,7 @@ ul.dropdown-menu li {
 }
 @media (max-width: 768px) {
   #header-WhoWeAre h1{
-    font-size: 40px;
+    font-size: 34px;
   }
 }
 
@@ -1703,12 +1703,12 @@ h3.quote::before {
   justify-content: center;
   margin: 0 auto;
   align-items: center;
-  padding: 40px;
-  padding-top: 60px;
+  padding: 5px;
+  padding-top: 35px;
 }
 
 .section-title {
-  font-size: 34px;
+  font-size: 28px;
   margin-bottom: 20px;
   box-shadow: #000;
 }
